--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -12,7 +12,7 @@
             android:title="Reporte" />
     </group>
 
-    <item android:title="Cerrar Session">
+    <item android:title="Cerrar Sesión">
         <menu>
             <item
                 android:id="@+id/salir"
