--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -10,6 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.qallta.bang.RegistrarseActivity">
 
+
     <ProgressBar
         android:id="@+id/login_progress"
         style="?android:attr/progressBarStyleLarge"
@@ -34,7 +35,7 @@
                     android:id="@+id/ci"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="CI"
+                    android:hint="Carnet de Identidad"
                     android:phoneNumber="true"
                     android:maxLength="8"
                     android:singleLine="true"/>
@@ -66,7 +67,7 @@
                     android:id="@+id/direccion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Direccion"
+                    android:hint="Dirección"
                     android:singleLine="true"/>
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
@@ -76,7 +77,7 @@
                     android:id="@+id/telefono"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Telefono"
+                    android:hint="Teléfono Celular"
                     android:maxLength="8"
                     android:phoneNumber="true"
                     android:singleLine="true"/>
@@ -84,7 +85,6 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
                 <EditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
@@ -92,7 +92,6 @@
                     android:hint="Correo"
                     android:inputType="textEmailAddress"
                     android:singleLine="true"/>
-
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -118,6 +117,20 @@
                     android:maxLines="1"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/repeat_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Repetir Contraseña"
+                    android:imeActionId="@+id/login"
+                    android:inputType="textPassword"
+                    android:imeOptions="actionUnspecified"
+                    android:maxLines="1"
+                    android:singleLine="true" />
+            </android.support.design.widget.TextInputLayout>
 
 
 
@@ -128,6 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/Registrar"
+                android:textColor="#FFFFFF"
                 android:textStyle="bold" />
 
         </LinearLayout>
